@@ -38,6 +38,12 @@
 <p>2019-02-16  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/jpeg.c (ReadJPEGImage): JPEG files are observed to
+provide compression ratios as high as 2500 so allow for that.
+Also, the test for &quot;Unreasonable dimensions&quot; delivered yesterday
+was flawed since magick_rows and magick_columns are only set if a
+desired image size was provided.  Fixes SourceForge issue 592
+&quot;Non-malicious JPEG file fails with &quot;Unreasonable dimensions&quot;&quot;.</li>
 <li>coders/tiff.c (ReadTIFFImage): Only disassociate alpha channel
 for images where photometic is PHOTOMETRIC_RGB. Fixes oss-fuzz
 13115 &quot;graphicsmagick/coder_PTIF_fuzzer:
