@@ -1,5 +1,12 @@
 2019-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/jpeg.c (ReadJPEGImage): JPEG files are observed to
+	provide compression ratios as high as 2500 so allow for that.
+	Also, the test for "Unreasonable dimensions" delivered yesterday
+	was flawed since magick_rows and magick_columns are only set if a
+	desired image size was provided.  Fixes SourceForge issue 592
+	"Non-malicious JPEG file fails with "Unreasonable dimensions"".
+
 	* coders/tiff.c (ReadTIFFImage): Only disassociate alpha channel
 	for images where photometic is PHOTOMETRIC_RGB. Fixes oss-fuzz
 	13115 "graphicsmagick/coder_PTIF_fuzzer:
